add extra token to test name generation that included enc type. activate KALIUM enc type for time being to eventual decde how to configure it or remove entirely. Add third party test. Clean up redundent buidl file code.