@@ -6,15 +6,3 @@ dependencies {
   implementation project(":encryption:encryption-api")
   implementation "eu.neilalexander:jnacl"
 }
-
-description = "encryption-jnacl"
-
-//compileJava {
-//    doFirst {
-//        options.compilerArgs = [
-//                "--module-path", classpath.asPath,
-//                "--add-modules", "jnacl",
-//        ]
-//        classpath = files()
-//    }
-//}
